module aliases integrated and app.log synced between docker and local env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - ./docs:/var/www/app/docs
       - ./package.json:/var/www/app/package.json
       - ./app.js:/var/www/app/app.js
+      - ./app.log:/var/www/app/app.log
     ports:
       - 4001:4001
       - 4002:4002
