--- a/package.json
+++ b/package.json
@@ -12,10 +12,24 @@
     "cli:prod": "NODE_ENV=production node src/bin/cli",
     "start": "npm run start:dev",
     "start:dev": "PORT=4001 NODE_ENV=development nodemon ./src/bin/www",
-    "start:staging": "PORT=4001 NODE_ENV=staging nodemon ./src/bin/www",
-    "start:prod": "PORT=4001 NODE_ENV=production nodemon ./src/bin/www",
+    "start:staging": "PORT=4001 NODE_ENV=staging pm2-runtime ./src/bin/www",
+    "start:prod": "PORT=4001 NODE_ENV=production pm2-runtime ./src/bin/www",
     "doc": "./node_modules/.bin/apidoc -i ./src/controllers/ -o ./docs/api",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha ./src/tests/index.test.js --timeout 5000"
+  },
+  "_moduleAliases": {
+    "@config": "src/config/",
+    "@console": "src/console/",
+    "@containers": "src/containers/",
+    "@controllers": "src/controllers/",
+    "@events": "src/events/",
+    "@helpers": "src/helpers/",
+    "@listeners": "src/listeners/",
+    "@middlewares": "src/middlewares/",
+    "@models": "src/models/",
+    "@routes": "src/routes/",
+    "@services": "src/services/",
+    "@repositories": "src/repositories/"
   },
   "dependencies": {
     "awilix": "^3.0.9",
@@ -31,12 +45,14 @@
     "http-errors": "~1.6.2",
     "joi": "^13.6.0",
     "jwt-simple": "^0.5.1",
+    "module-alias": "^2.2.0",
     "mongoose": "^5.2.12",
     "mongoose-paginate-v2": "^1.0.12",
     "node-cron": "^2.0.3",
     "node-env-file": "^0.1.8",
     "nodemon": "^1.18.3",
     "object-to-xml": "^2.0.0",
+    "pm2": "^3.5.0",
     "simple-express-route-builder": "^0.1.1",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2",
