--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ typings/
 # dotenv environment variables file
 # .env
 
-./package-lock.json
+package-lock.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
